import("//build/lite/config/component/lite_component.gni")

lite_component("app") {
    features = [
        "../ssd1306/ssd1306:oled_ssd1306",
        "led_demo",
        "../libm_port/libm_port:libm_port"
    ]
}

static_library("led_demo"){
    sources = [
        "led_demo.c"
    ]
    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/peripheral/interfaces/kits",
    ]
}